@@ -7,6 +7,10 @@
 @unnumbered New features in 2.3 since 2.2
 
 @itemize @bullet
+@item @code{\bookpaper} and @code{\paper} have been renamed to
+@code{\paper} and @code{\layout} respectively, to better match their
+function.
+
 @item Parts that use @code{\quote} can now be transposed.
 
 @item LilyPond does not try to produce output for files that
@@ -63,7 +67,7 @@ string that is dumped as verbatim PostScript in the output.
 melody by setting the @code{associatedVoice} property.
 
 @item The @code{\lyricsto} keyword now automatically switches on
-@code{\lyrics} mode.
+lyrics mode.
 
 @item The LilyPond binary  now supports output options
 @code{--dvi} @code{--png} @code{--ps} @code{--pdf} and
